@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 56;
+use Test::More tests => 57;
 #use Test::More 'no_plan';
 use File::Spec::Functions qw(catfile catdir tmpdir);
 use Test::MockModule;
@@ -209,8 +209,10 @@ my @dists;
 $idx_mock->mock(add_distribution => sub { push @dists => $_[1] });
 my @paths;
 my $called;
+my @parsed;
 $idx_mock->mock(update_root_json => sub { $called = 1 });
 $idx_mock->mock(copy_from_mirror => sub { push @paths => $_[1] });
+$idx_mock->mock(parse_from_mirror => sub { shift; push @parsed => \@_ });
 $idx_mock->mock(update_mirror_meta => sub {
     $api_mock->unmock_all;
     pass 'Should update mirror meta';
@@ -235,6 +237,8 @@ is_deeply \@paths, [qw(
     stats/tag.json
     stats/summary.json
 )], 'And it should have found and copied mirrors, spec, and stats';
+is_deeply \@parsed, [['meta/spec.txt', 'Multimarkdown']],
+    'And it should have parsed spec.txt';
 
 ##############################################################################
 # digest_for()
