@@ -7,6 +7,8 @@ Revision history for Perl extension PGXN::API
         the thing to be searched is required in the URI.
       - Made the regular expression matching stats URIs stricter. It now
         matches `(?:dist|tag|user|extension|summary)` rather than `[^/]+?`.
+      - Added a `.html` version of the spec to the API doc root, parsed from
+        the MultiMarkdown `.txt` file copied from the mirror.
 
 0.10.0  2011-04-11T23:41:16
       - Removed PGXN::API::Stats. The same data is now generated by
